#8 stop darkmode if user turn on official dark mode on live page.

--- a/contents/dark-mode.css
+++ b/contents/dark-mode.css
@@ -3,57 +3,57 @@
 }
 
 /* 所有元素，颜色翻转（暗黑） */
-html.dark-bili {
+html.dark-bili:not([lab-style='dark']) {
   color-scheme: dark light;
   filter: invert(var(--primary-invert-amount)) hue-rotate(.5turn);
 }
 
 /* 图片、视频、带有背景图的原色，保持原有颜色（再次翻转） */
-.dark-bili img,
-.dark-bili svg,
-.dark-bili [style*='background:url'],
-.dark-bili [style*='background-image:url'],
-.dark-bili [style*='background: url'],
-.dark-bili [style*='background-image: url'],
-.dark-bili video,
-.dark-bili bwp-video {
+.dark-bili:not([lab-style='dark']) img,
+.dark-bili:not([lab-style='dark']) svg,
+.dark-bili:not([lab-style='dark']) [style*='background:url'],
+.dark-bili:not([lab-style='dark']) [style*='background-image:url'],
+.dark-bili:not([lab-style='dark']) [style*='background: url'],
+.dark-bili:not([lab-style='dark']) [style*='background-image: url'],
+.dark-bili:not([lab-style='dark']) video,
+.dark-bili:not([lab-style='dark']) bwp-video {
   filter: invert(var(--primary-invert-amount)) hue-rotate(.5turn);
 }
 
 /* 以 icon 开头和结尾的 svg，一般用于修饰文字的图表，不进行再次翻转（保持暗黑） */
-.dark-bili svg[class$='icon'] {
+.dark-bili:not([lab-style='dark']) svg[class$='icon'] {
   filter: unset;
 }
-.dark-bili svg[class^='icon'] {
+.dark-bili:not([lab-style='dark']) svg[class^='icon'] {
   filter: unset;
 }
 
 /* Video Player Page: 反转播放器：保持原色 */
-.dark-bili .bpx-player-video-area {
+.dark-bili:not([lab-style='dark']) .bpx-player-video-area {
   filter: invert(var(--primary-invert-amount)) hue-rotate(.5turn);
 }
 
 /* Video Player Page: 播放器中的图片、视频等，不需要再次反转 */
-.dark-bili .bpx-player-video-area img,
-.dark-bili .bpx-player-video-area svg,
-.dark-bili .bpx-player-video-area [style*='background:url'],
-.dark-bili .bpx-player-video-area [style*='background-image:url'],
-.dark-bili .bpx-player-video-area [style*='background: url'],
-.dark-bili .bpx-player-video-area [style*='background-image: url'],
-.dark-bili .bpx-player-video-area video,
-.dark-bili .bpx-player-video-area bwp-video,
-.dark-bili .horizontal-ratio-item-inner .season-cover-views svg /* 番剧页面，视频卡片上统计信息的 icon */ {
+.dark-bili:not([lab-style='dark']) .bpx-player-video-area img,
+.dark-bili:not([lab-style='dark']) .bpx-player-video-area svg,
+.dark-bili:not([lab-style='dark']) .bpx-player-video-area [style*='background:url'],
+.dark-bili:not([lab-style='dark']) .bpx-player-video-area [style*='background-image:url'],
+.dark-bili:not([lab-style='dark']) .bpx-player-video-area [style*='background: url'],
+.dark-bili:not([lab-style='dark']) .bpx-player-video-area [style*='background-image: url'],
+.dark-bili:not([lab-style='dark']) .bpx-player-video-area video,
+.dark-bili:not([lab-style='dark']) .bpx-player-video-area bwp-video,
+.dark-bili:not([lab-style='dark']) .horizontal-ratio-item-inner .season-cover-views svg /* 番剧页面，视频卡片上统计信息的 icon */ {
   filter: unset;
 }
 
-.dark-bili .bili-video-card__stats, /* 首页：视频卡片上的播放量、弹幕数、时长，保留原色，不需要反转 */
-.dark-bili .bili-live-card__stats, /* 首页：直播卡片上的播放量、弹幕数、时长，保留原色，不需要反转 */
-.dark-bili .bili-dyn-card-video__cover-shadow /* 动态详情页面：视频卡片的 stat 信息不需要反转*/ {
+.dark-bili:not([lab-style='dark']) .bili-video-card__stats, /* 首页：视频卡片上的播放量、弹幕数、时长，保留原色，不需要反转 */
+.dark-bili:not([lab-style='dark']) .bili-live-card__stats, /* 首页：直播卡片上的播放量、弹幕数、时长，保留原色，不需要反转 */
+.dark-bili:not([lab-style='dark']) .bili-dyn-card-video__cover-shadow /* 动态详情页面：视频卡片的 stat 信息不需要反转*/ {
   filter: invert(0.85) hue-rotate(.5turn);
 }
 
 /* 视频页面在 fullscreen 下，需要先做颜色反转 */
-.dark-bili :fullscreen {
+.dark-bili:not([lab-style='dark']) :fullscreen {
   color-scheme: dark light;
   filter: invert(var(--primary-invert-amount)) hue-rotate(.5turn);
 }
@@ -63,8 +63,8 @@ html.dark-bili {
   剧集播放页面、文章页面的评论文字，B站未设置颜色，导致无法反转。
   Adhoc 给这里先加上默认文字颜色。
 */
-.bb-comment .comment-list .list-item .text,
-.bb-comment .comment-list .list-item .user .text-con {
+.dark-bili:not([lab-style='dark']) .bb-comment .comment-list .list-item .text,
+.dark-bili:not([lab-style='dark']) .bb-comment .comment-list .list-item .user .text-con {
   color: #18191C;
 }
 
@@ -72,7 +72,7 @@ html.dark-bili {
   https://github.com/flanker/bilibili-dark-mode/issues/7
   历史记录页面的搜索框没有适配夜间模式。
 */
-input {
+.dark-bili:not([lab-style='dark']) input {
   background-color: transparent;
   color: #18191C;
 }
